--- a/SharpMud/packages.config
+++ b/SharpMud/packages.config
@@ -1,6 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.2-beta1" targetFramework="net45" />
-  <package id="Microsoft.Experimental.Collections" version="1.0.3-alpha" targetFramework="net45" />
-  <package id="UnconstrainedMelody" version="0.2.1" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
 </packages>
